fix: align with recently deleted navbar css

--- a/style/style.css
+++ b/style/style.css
@@ -181,8 +181,7 @@ label.logo{
 
 }
 
-.
-img {
+.img {
     display:inline-block;
     vertical-align:middle;
 }
@@ -502,8 +501,17 @@ footer {
 	}
   }
 
-	section{
-    	background: url(bg1.jpeg) no-repeat;
-    	background-size: cover;
-    	/*height: calc(100vh - 80px);*/
-		
+.dummy-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  z-index: -1;
+  padding: 0 20px;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+.dummy-text h2{
+  font-size: 45px;
+  margin: 5px 0;
+}
